@@ -6,5 +6,5 @@ DIST qt-x11-opensource-src-4.5.2.tar.bz2 116015284 RMD160 1af31d7fe66665e718f0c7
 EBUILD qt-gui-4.5.2.ebuild 5475 RMD160 34f1adc75042a821aa56b8ebc8107d0c9ce57301 SHA1 b032e82f4f9fb903b303daee044662bfc969e49f SHA256 a03e2710d2efc9dd3e410dcd7903a98a7b87de053175cd78287c79810c5244ca
 EBUILD qt-gui-4.5.9999.ebuild 5258 RMD160 4276d9b84c60f8cba44cb849bfcf45b4fa3eaa35 SHA1 302418f50601ea798409ed357c783cf66c5ca775 SHA256 ece9759c8d9fc2707fcfe7846688c05b74bcd9777b04d2745181383a4cbe27d5
 EBUILD qt-gui-4.9999.ebuild 5222 RMD160 9c2db8855feb4e8a7400cf3974752a90554e6dd7 SHA1 341206b5d1c23941010dd7a4ef3c2f06091da81d SHA256 f20c7f509bd60fa4928d352a39745c54939affb247fd56eaf5cc2d2a0371811a
-MISC ChangeLog 5944 RMD160 bb4b2422f128ab5b577f7ec8dcf6a83e2433540f SHA1 314fa88516a8a67e34890825fc47ddfd444bbb02 SHA256 27ad56bbcdc4b6df4f6829088486d708f7d235d38586fe1a350520066df4eaae
-MISC metadata.xml 537 RMD160 d0490d598c5f9f2b2c4e029a7de25bfb98a69da1 SHA1 144fb6db0eb87181cbbd2c20bc0bee2fc50da5c4 SHA256 d11db08dfc53c1cd11a530fe013407d0247c67d07ac00922046f3f8a25bbdd93
+MISC ChangeLog 6059 RMD160 5aa95ca001ddf5df4e04443d7612a365f19a68b3 SHA1 157550380c19a03e2be3cd31b52940c2365935d2 SHA256 541ae93a30492c0d44506d36203b05a878b73ea4c17c02671da6f556890401fe
+MISC metadata.xml 507 RMD160 e5c9d9cc08810bc586827ee2f816d93e63497143 SHA1 2943df5cd767a4ac0616036ab7317fa6773c3731 SHA256 9ae179dbef03ae0119a9c3e9a44298bf364c9e9d55ac1a3f91954d01bad2f1ac
