@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-  <herd>qt</herd> 
-  <use>
-    <flag name='glib'>
-      Enable <pkg>dev-libs/glib</pkg> eventloop support
-    </flag>
-	<flag name='gtkstyle'>
-	      Build the Qt-GTK+ style, which integrates Qt4 apps with the GTK+ theme
+<herd>qt</herd>
+<use>
+	<flag name="glib">
+		Enable <pkg>dev-libs/glib</pkg> eventloop support.
 	</flag>
-    <flag name='qt3support'>Enable the Qt3Support libraries for Qt4. Note that
-      this does not mean you can compile pure Qt3 programs with Qt4.
-    </flag>
-  </use>
+	<flag name="gtk">
+		Build the Qt-GTK+ style, which integrates Qt4 apps with
+		the GTK+ theme.
+	</flag>
+	<flag name="qt3support">
+		Enable the Qt3Support libraries for Qt4. Note that this
+		does not mean you can compile pure Qt3 programs with Qt4.
+	</flag>
+</use>
 </pkgmetadata>
