@@ -2,6 +2,9 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  27 Jun 2009; Davide Pesavento <davidepesa@gmail.com> metadata.xml:
+  Update USE descriptions (gtkstyle -> gtk).
+
   26 Jun 2009; Davide Pesavento <davidepesa@gmail.com> qt-gui-4.5.9999.ebuild,
   qt-gui-4.9999.ebuild:
   Apply previous changesets to live ebuilds.
